--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
-<router-outlet>
-  
-
-</router-outlet>
+<nav>
+  <a routerLink="/">
+    Home(World)
+  </a>
+  <a routerLink="/kitty">
+    Kitty
+  </a>
+</nav>
+<router-outlet></router-outlet>
